# python-project-lvl1

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
aleksey94dan_brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/: cli.py  engine.py  logic.py  rule.py
brain_games/games/: calc.py  even.py  game.py  gcd.py  logic.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
