[tool.poetry]
name = "Aleksey94Dan_brain_games"
version = "1.3.1"
description = ""
authors = ["Aleksey Danilchenko <danilchenko.aleksey94@gmail.com>"]
packages = [{ include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games1:main"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

