[tool.poetry]
name = "Aleksey94Dan_brain_games"
version = "1.13.6"
description = "This is package for short brain games"
authors = ["Aleksey Danilchenko <danilchenko.aleksey94@gmail.com>"]
packages = [{ include = "brain_games"}]
classifiers = ["Topic :: Games/Entertainment"]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

